<resources>
    <string name="app_name">Dolgan</string>
    <string name="main_text">Главная</string>
    <string name="tov_text">Товары</string>
    <string name="info_text">Наш сайт</string>
    <string name="main_name">Хоту Ахтыы</string>
    <string name="f">История этого малочисленного народа севера крайне интересна и важна для нашего севера, но сейчас представителей этой народности всё меньше и меньше. И поэтому нам важно помочь сохранить их культуру.</string>
</resources>