<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B43D78B1"
    tools:context="MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:shadowColor="#FFFFFF"
                android:text="@string/main_name"
                android:textColor="#FFFFFF"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="Хоту Ахтыы - Память Севера. Наш благотворительный фонд занимается популяризированием и сохранением культуры Долганов."
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="201dp"
                app:srcCompat="@drawable/main" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:fontFamily="sans-serif-medium"
                android:text="Долганы (долган, тыакихи, саха) — коренной народ севера Красноярского края. Большая их часть проживает по рекам Хета и Хатанга Таймырского Долгано-Ненецкого муниципального района. Всего в России, по данным переписи 2010 г., насчитывается 7885 долган. В Красноярском крае — 5816 долган. К традиционным занятиям долган относятся оленеводство, охота на дикого северного оленя и пушного зверя, рыболовство. Из объектов охотничьего промысла наибольшее значение имеет северный дикий олень. Применялись коллективные поколки оленей на сезонных переправах через реки. "
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:src="@drawable/dolg" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:fontFamily="sans-serif-medium"
                android:text="Долганское искусство представлено фольклором, в котором прослеживается якутское и русское влияние. Былины исполняются в виде песен, близких якутским олонхо.  В сказаниях встречаются эвенкийские заимствования. Слагаются также песни, загадки, пословицы и поговорки. Из музыкальных инструментов встречается варган якутского типа. Танцевальное искусство носит черты эвенкийского воздействия (хороводный танец — хейро). В долганских поселках отмечают такие национальные праздники, как Хейро, День оленевода, День рыбака. "
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="201dp"
                app:srcCompat="@drawable/dolna" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="191dp"
                android:layout_marginBottom="80dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/f"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="345dp"
                android:layout_height="81dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="Вы можете приобрести наши услуги, чтобы поддержать наш фонд"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:background="@color/white_gray1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="76dp"
            android:layout_height="83dp"
            android:layout_marginBottom="108dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="100dp"
            android:layout_height="94dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/info_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="94dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:rotation="270"
            android:text="Услуги"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="94dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:rotation="270"
            android:text="@string/main_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateIds" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>